SLING-8740 - remove ProvisioningModelIT (redundant with sling-org-apache-sling-launchpad-integration-tests/RepoinitPathTest) and prepare for moving RepoInitTextIT to paxexam testing